--- a/calendar_encrypted.html
+++ b/calendar_encrypted.html
@@ -1,6 +1,3 @@
----
-layout: default
----
 <!DOCTYPE html>
 <html class="staticrypt-html">
 <head>
@@ -41,7 +38,7 @@ layout: default
           <div class="mdc-notched-outline__trailing"></div>
         </div>
       </div>
-      <p class="password-question">Don't know the password? Request the pasword from the Webmaster.</p>
+      <p class="password-question">Don't know the password? Request the password from the Webmaster.</p>
       <a href="./contact-webmaster.html" class="mdc-button contact">Contact Webmaster</a>
       <div class="submit-button">
         <button type="submit" class="mdc-button mdc-button--raised standard-dark-button" value="Submit">Submit</button>
